Fix render issue on small devices.

--- a/deb/openmediavault/workbench/src/app/core/components/guru-meditation/guru-meditation.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/guru-meditation/guru-meditation.component.scss
@@ -1,6 +1,6 @@
 .message {
   background-color: #000000;
-  padding: 12px 0 12px 0;
+  padding: 12px;
   border: solid 6px #ff0000;
   color: #f72000;
   font-family: courier, 'Courier New', monospace;
